[gd_scene load_steps=38 format=2]

[ext_resource path="res://script/Spirk.gd" type="Script" id=1]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-09.png" type="Texture" id=2]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-01.png" type="Texture" id=3]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-08.png" type="Texture" id=4]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-02.png" type="Texture" id=5]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-05.png" type="Texture" id=6]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-07.png" type="Texture" id=7]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-06.png" type="Texture" id=8]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-03.png" type="Texture" id=9]
[ext_resource path="res://assets/art/enemies/spirk/png/attack-ball/Sprite-spirk-animation-attack-ball-04.png" type="Texture" id=10]
[ext_resource path="res://assets/art/enemies/spirk/png/idle/Sprite-spirk-animation-idle1.png" type="Texture" id=11]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead1.png" type="Texture" id=12]
[ext_resource path="res://assets/art/enemies/spirk/png/walk/Sprite-spirk-animation-walk1.png" type="Texture" id=13]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead6.png" type="Texture" id=14]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead7.png" type="Texture" id=15]
[ext_resource path="res://assets/art/enemies/spirk/png/idle/Sprite-spirk-animation-idle2.png" type="Texture" id=16]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead3.png" type="Texture" id=17]
[ext_resource path="res://assets/art/enemies/spirk/png/idle/Sprite-spirk-animation-idle3.png" type="Texture" id=18]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead4.png" type="Texture" id=19]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead5.png" type="Texture" id=20]
[ext_resource path="res://assets/art/enemies/spirk/png/walk/Sprite-spirk-animation-walk4.png" type="Texture" id=21]
[ext_resource path="res://assets/art/enemies/spirk/png/idle/Sprite-spirk-animation-idle4.png" type="Texture" id=22]
[ext_resource path="res://assets/art/enemies/spirk/png/dead/Sprite-spirk-animation-dead2.png" type="Texture" id=23]
[ext_resource path="res://assets/art/enemies/spirk/png/walk/Sprite-spirk-animation-walk3.png" type="Texture" id=24]
[ext_resource path="res://assets/art/enemies/spirk/png/walk/Sprite-spirk-animation-walk2.png" type="Texture" id=25]
[ext_resource path="res://scene/SpirkProjectile.tscn" type="PackedScene" id=26]
[ext_resource path="res://assets/audio/sfx/enemies/spirk/Inimigo 2 morrendo.mp3" type="AudioStream" id=27]
[ext_resource path="res://assets/audio/sfx/enemies/spirk/Inimigo 2 andando.mp3" type="AudioStream" id=28]
[ext_resource path="res://assets/audio/sfx/enemies/Inimigos tomando dano.mp3" type="AudioStream" id=29]
[ext_resource path="res://assets/audio/sfx/enemies/spirk/Inimigo 2 atacando.mp3" type="AudioStream" id=30]
[ext_resource path="res://assets/art/enemies/spirk/png/Sprite-spirk-shadow.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 33.1361

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.99998
height = 6.00004

[sub_resource type="CircleShape2D" id=4]
radius = 88.0

[sub_resource type="Animation" id=5]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.321569, 0.321569, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Spirk" type="KinematicBody2D" groups=["mob"]]
collision_layer = 8
collision_mask = 9
script = ExtResource( 1 )
projectile_scene = ExtResource( 26 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -1, 4 )
texture = ExtResource( 31 )

[node name="SpirkAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dead"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="TimerDeath" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="TimerAttack" type="Timer" parent="."]
one_shot = true

[node name="TimerCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="NearArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )
rotation = 1.5708

[node name="TooClose" type="CollisionShape2D" parent="NearArea"]
visible = false
shape = SubResource( 3 )

[node name="SpirkHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="FarArea" type="Area2D" parent="."]
visible = false

[node name="FarEnough" type="CollisionShape2D" parent="FarArea"]
visible = false
shape = SubResource( 4 )

[node name="dano" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 29 )
bus = "SFX"

[node name="morrendo" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 27 )
bus = "SFX"

[node name="ataque" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 30 )
bus = "SFX"

[node name="andar" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 28 )
bus = "SFX"

[node name="effect" type="AnimationPlayer" parent="."]
root_node = NodePath("../SpirkAnimation")
reset_on_save = false
playback_speed = 1.5
anims/damage = SubResource( 5 )
anims/idle = SubResource( 6 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerCooldown" to="." method="_on_TimerCooldown_timeout"]
[connection signal="body_entered" from="NearArea" to="." method="_on_NearArea_body_entered"]
[connection signal="body_exited" from="FarArea" to="." method="_on_FarArea_body_exited"]
[connection signal="animation_finished" from="effect" to="." method="_on_effect_animation_finished"]
